# Regression-Error-Characteristic-Curve

./: .flake8  .travis.yml  LICENSE  README.md  REC.ipynb  REC.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: example.ipynb
src/: rec.py
src/rec/: __init__.py  _rec.py
tests/rec/: test_rec.py
